Try-fix trick viewport units on mobile

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -24,7 +24,7 @@
 
 .content {
 	min-height: 100vh;
-	min-height: -webkit-fill-available; // WebKit 100vh bug fix
+	min-height: calc(var(--vh, 1vh) * 100);
 	width: calc(100% - #{$margin-laptop} * 2);
 	position: absolute;
 	top: 0;
